yabr/config/parser.output
Grammar

    0 $accept: config_file $end

    1 config_file: block_list

    2 block_list: block
    3           | block_list ',' block
    4           | block_list TOK_ERR
    5           | block_list TOK_EOF

    6 status_property: TOK_IDENT '=' TOK_STRING
    7                | TOK_IDENT '=' TOK_INTEGER

    8 status_property_list: %empty
    9                     | status_property
   10                     | status_property_list ',' status_property
   11                     | status_property_list ','

   12 status: status_block_prefix '{' status_property_list '}'

   13 status_list: %empty
   14            | status
   15            | status_list ',' status
   16            | status_list ','

   17 block: %empty
   18      | TOK_CENTER '{' status '}'
   19      | right_block_prefix status_list '}'

   20 right_block_prefix: TOK_RIGHT '{'

   21 status_block_prefix: TOK_STATUS TOK_IDENT


Terminals, with rules where they appear

$end (0) 0
',' (44) 3 10 11 15 16
'=' (61) 6 7
'{' (123) 12 18 20
'}' (125) 12 18 19
error (256)
TOK_IDENT (258) 6 7 21
TOK_STRING (259) 6
TOK_STATUS (260) 21
TOK_CENTER (261) 18
TOK_RIGHT (262) 20
TOK_INTEGER (263) 7
TOK_EOF (264) 5
TOK_ERR (265) 4


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
config_file (16)
    on left: 1, on right: 0
block_list (17)
    on left: 2 3 4 5, on right: 1 3 4 5
status_property (18)
    on left: 6 7, on right: 9 10
status_property_list (19)
    on left: 8 9 10 11, on right: 10 11 12
status (20)
    on left: 12, on right: 14 15 18
status_list (21)
    on left: 13 14 15 16, on right: 15 16 19
block (22)
    on left: 17 18 19, on right: 2 3
right_block_prefix (23)
    on left: 20, on right: 19
status_block_prefix (24)
    on left: 21, on right: 12


State 0

    0 $accept: . config_file $end

    TOK_CENTER  shift, and go to state 1
    TOK_RIGHT   shift, and go to state 2

    $default  reduce using rule 17 (block)

    config_file         go to state 3
    block_list          go to state 4
    block               go to state 5
    right_block_prefix  go to state 6


State 1

   18 block: TOK_CENTER . '{' status '}'

    '{'  shift, and go to state 7


State 2

   20 right_block_prefix: TOK_RIGHT . '{'

    '{'  shift, and go to state 8


State 3

    0 $accept: config_file . $end

    $end  shift, and go to state 9


State 4

    1 config_file: block_list .
    3 block_list: block_list . ',' block
    4           | block_list . TOK_ERR
    5           | block_list . TOK_EOF

    TOK_EOF  shift, and go to state 10
    TOK_ERR  shift, and go to state 11
    ','      shift, and go to state 12

    $default  reduce using rule 1 (config_file)


State 5

    2 block_list: block .

    $default  reduce using rule 2 (block_list)


State 6

   19 block: right_block_prefix . status_list '}'

    TOK_STATUS  shift, and go to state 13

    $default  reduce using rule 13 (status_list)

    status               go to state 14
    status_list          go to state 15
    status_block_prefix  go to state 16


State 7

   18 block: TOK_CENTER '{' . status '}'

    TOK_STATUS  shift, and go to state 13

    status               go to state 17
    status_block_prefix  go to state 16


State 8

   20 right_block_prefix: TOK_RIGHT '{' .

    $default  reduce using rule 20 (right_block_prefix)


State 9

    0 $accept: config_file $end .

    $default  accept


State 10

    5 block_list: block_list TOK_EOF .

    $default  reduce using rule 5 (block_list)


State 11

    4 block_list: block_list TOK_ERR .

    $default  reduce using rule 4 (block_list)


State 12

    3 block_list: block_list ',' . block

    TOK_CENTER  shift, and go to state 1
    TOK_RIGHT   shift, and go to state 2

    $default  reduce using rule 17 (block)

    block               go to state 18
    right_block_prefix  go to state 6


State 13

   21 status_block_prefix: TOK_STATUS . TOK_IDENT

    TOK_IDENT  shift, and go to state 19


State 14

   14 status_list: status .

    $default  reduce using rule 14 (status_list)


State 15

   15 status_list: status_list . ',' status
   16            | status_list . ','
   19 block: right_block_prefix status_list . '}'

    ','  shift, and go to state 20
    '}'  shift, and go to state 21


State 16

   12 status: status_block_prefix . '{' status_property_list '}'

    '{'  shift, and go to state 22


State 17

   18 block: TOK_CENTER '{' status . '}'

    '}'  shift, and go to state 23


State 18

    3 block_list: block_list ',' block .

    $default  reduce using rule 3 (block_list)


State 19

   21 status_block_prefix: TOK_STATUS TOK_IDENT .

    $default  reduce using rule 21 (status_block_prefix)


State 20

   15 status_list: status_list ',' . status
   16            | status_list ',' .

    TOK_STATUS  shift, and go to state 13

    $default  reduce using rule 16 (status_list)

    status               go to state 24
    status_block_prefix  go to state 16


State 21

   19 block: right_block_prefix status_list '}' .

    $default  reduce using rule 19 (block)


State 22

   12 status: status_block_prefix '{' . status_property_list '}'

    TOK_IDENT  shift, and go to state 25

    $default  reduce using rule 8 (status_property_list)

    status_property       go to state 26
    status_property_list  go to state 27


State 23

   18 block: TOK_CENTER '{' status '}' .

    $default  reduce using rule 18 (block)


State 24

   15 status_list: status_list ',' status .

    $default  reduce using rule 15 (status_list)


State 25

    6 status_property: TOK_IDENT . '=' TOK_STRING
    7                | TOK_IDENT . '=' TOK_INTEGER

    '='  shift, and go to state 28


State 26

    9 status_property_list: status_property .

    $default  reduce using rule 9 (status_property_list)


State 27

   10 status_property_list: status_property_list . ',' status_property
   11                     | status_property_list . ','
   12 status: status_block_prefix '{' status_property_list . '}'

    ','  shift, and go to state 29
    '}'  shift, and go to state 30


State 28

    6 status_property: TOK_IDENT '=' . TOK_STRING
    7                | TOK_IDENT '=' . TOK_INTEGER

    TOK_STRING   shift, and go to state 31
    TOK_INTEGER  shift, and go to state 32


State 29

   10 status_property_list: status_property_list ',' . status_property
   11                     | status_property_list ',' .

    TOK_IDENT  shift, and go to state 25

    $default  reduce using rule 11 (status_property_list)

    status_property  go to state 33


State 30

   12 status: status_block_prefix '{' status_property_list '}' .

    $default  reduce using rule 12 (status)


State 31

    6 status_property: TOK_IDENT '=' TOK_STRING .

    $default  reduce using rule 6 (status_property)


State 32

    7 status_property: TOK_IDENT '=' TOK_INTEGER .

    $default  reduce using rule 7 (status_property)


State 33

   10 status_property_list: status_property_list ',' status_property .

    $default  reduce using rule 10 (status_property_list)
